Se agrego modulo QR

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1682,7 +1682,7 @@ textarea:invalid {
   font-size: 1rem;
   background-color: transparent;
   padding: 0.5rem 0;
-  color: #073984;
+  color: #9B27B0;
   border-radius: 0.5rem;
   border: 1px solid transparent;
 }
