Login por Mauricio

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -362,8 +362,8 @@ caption {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #0d5afd;
-  border-color: #0d5afd;
+  background-color: #AA47BC;
+  border-color: #AA47BC;
 }
 
 .btn-primary:hover {
